--- a/Bootstrap/bootstrap.html
+++ b/Bootstrap/bootstrap.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="Login.html">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -38,8 +38,8 @@
                     <a class="nav-link disabled">Disabled</a>
                   </li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class=" d-flex" role="search">
+                  <input class="form-control me-2 bg-white" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
               </div>
@@ -160,19 +160,7 @@
         </form>
         <br>
         <br>
-        <form class="row g-3">
-            <div class="col-auto">
-                <label for="inputEmail2" class="visually-hidden">email@login.com</label>
-                <input type="email" class="form-control" id="inputEmail2" placeholder="email@login.com">
-              </div>
-            <div class="col-auto">
-              <label for="inputPassword2" class="visually-hidden">Password</label>
-              <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
-            </div>
-            <div class="col-auto">
-              <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
-            </div>
-          </form>
+          
       </div>
     </div>
 
